--- a/src/app/charts-route/charts-route.component.html
+++ b/src/app/charts-route/charts-route.component.html
@@ -30,7 +30,7 @@
 
     </div>
 
-    <div *ngIf="loadingChartData$ | async">
+    <div *ngIf="loadingChartData$ | async" class="loading-panel">
       Chargement...
     </div>
 
