--- a/src/app/region-select/region-select.component.scss
+++ b/src/app/region-select/region-select.component.scss
@@ -35,6 +35,7 @@
     > .row {
       display: flex;
       align-items: center;
+      padding: .3em 0;
 
       > .select-icon {
         flex: 0 0 auto;
@@ -57,7 +58,7 @@
           display: flex;
           align-items: center;
 
-          >* {
+          > * {
             flex: 0 0 auto;
 
             &:not(:first-child) {
@@ -66,7 +67,34 @@
           }
         }
       }
+
+
+      > .report-column {
+        flex: 0 0 auto;
+        text-align: right;
+
+        .counts {
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+
+          > * {
+            flex: 0 0 auto;
+            margin: .2em;
+            display: inline-block;
+          }
+        }
+
+        .date {
+          font-size: .6em;
+          opacity: .8;
+          display: inline-block;
+        }
+      }
+
     }
+
+
   }
 
 }
